# py-booking

./: .gitignore  README.md  config.ini  pyproject.toml
src/booking/: __init__.py  __main__.py  cli.py  config.py  database.py  models.py  validators.py
src/booking/models/: book.py  room.py
src/booking/tests/: test_booking.py  test_rooms.py
